clusters/home-lab-kubernetes-01/argocd/namespaces/istio-system/ingress/mtls-test.zufardhiyaulhaq.com/mtls-test-zufardhiyaulhaq-com-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mtls-test-zufardhiyaulhaq-com-vs
  namespace: istio-system
spec:
  hosts:
  - "mtls-test.zufardhiyaulhaq.com"
  gateways:
  - istio-system/mtls-test-zufardhiyaulhaq-com-gateway
  http:
  - name: "default-route"
    match:
    - uri:
        prefix: /
    route:
      - destination:
          port:
            number: 9898
          host: podinfo.bookinfo.svc.cluster.local
  exportTo:
    - "."
